Fix gallery modal on small screens

--- a/_sass/grid.scss
+++ b/_sass/grid.scss
@@ -44,3 +44,6 @@
 .col-12 {
   width: 100%;
 }
+.mvh-100 {
+  max-height: 100vh;
+}
